# wombo-bittensor-subnet

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  build_neuron.sh  client.Dockerfile  client.py  client.requirements.txt  common_setup.py  min_compute.yml  miner.Dockerfile  neuron.Dockerfile  neuron.requirements.txt  pm2_start_validator_all_gpus.sh  pm2_start_validator_one_gpu.sh  pyproject.toml  redis.yml  requirements.client.txt  requirements.txt  run.sh  run_client.sh  run_latest_validator  run_neuron.sh  setup.py  update.sh  validator-nginx.conf  validator.Dockerfile
base/: __init__.py  protocol.py
base-validator/: build.py  pyproject.toml
base-validator/base_validator/: input_sanitization.py  miner_metrics.py  validator.py
base-validator/protos/: scoring.proto
base/base/: miner.py  neuron.py  validator.py
base/miner/: __init__.py  forward.py
base/utils/: config.py
base/validator/: forward.py  reward.py
client/: Dockerfile  README.md  build_docker.sh  example.env  main.py  pyproject.toml  requirements.txt  run.sh  run_docker.sh  setup.py  setup.sh
client/client/: main.py
client/protos/: client.proto
forwarding-validator/: pyproject.toml
forwarding-validator/forwarding_validator/: main.py  miner_metrics.py  similarity_score_pipeline.py  validator.py  watermark.py
gpu-pipeline/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
gpu-pipeline/gpu_pipeline/: pipeline.py  tensor.py
gpu_generation/: pipeline.py
gpu_pipeline/: requirements.txt  setup.py
image-generation-protocol/: README.md  setup.py
image-generation-protocol/image_generation_protocol/: cryptographic_sample.py  io_protocol.py
image-generator/: Dockerfile  README.md  build.sh  build_docker.sh  common_setup.py  example.env  requirements.txt  run.sh  run_docker.sh  setup.py  setup.sh
image-generator/image_generator/: main.py
image_generation_protocol/: io.py  output.py
image_generator/: Dockerfile  main.py  run.sh  setup.py
miner/: Dockerfile  README.md  build.py  build_docker.sh  example.env  main.py  miner.py  pyproject.toml  requirements.txt  run.sh  run_docker.sh  setup.py  setup.sh
miner/miner/: image_generator.py  main.py  miner.py  miner_neuron.py
miner/protos/: miner.proto
neuron/: Dockerfile  README.md  build.py  neuron.py  protocol.py  pyproject.toml  requirements.txt  setup.py
neuron-selector/: Dockerfile  README.md  build.py  pyproject.toml  setup.py
neuron-selector/neuron_selector/: uids.py
neuron-selector/protos/: forwarding_validator.proto  image_generation.proto
neuron/neuron/: api_handler.py  dashboard_signature.py  defaults.py  misc.py  neuron.py  redis.py  select_endpoint.py
neuron/protos/: neuron.proto
neurons/: client.py  miner.py  validator.py
redis/: docker-compose.yml  redis.conf
stress-test-validator/: pyproject.toml
stress-test-validator/stress_test_validator/: miner_metrics.py  validator.py
template/: protocol.py
template/miner/: forward.py
template/utils/: config.py
template/validator/: __init__.py  forward.py  reward.py
tensor/: Dockerfile  README.md  build.py  config.py  protocol.py  pyproject.toml  requirements.txt  setup.py
tensor/protos/: inputs.proto
tensor/tensor/: api_handler.py  config.py  input_sanitization.py  interceptors.py  io_protocol.py  neuron_info.py  protocol.py  response.py  sample.py  timeouts.py  uids.py
tests/: test_template_validator.py
user-requests-validator/: pyproject.toml
user-requests-validator/user_requests_validator/: main.py  miner_metrics.py  validator.py
utils/: __init__.py  base64_images.py  protocol.py
validator/: Dockerfile  README.md  build_docker.sh  example.env  main.py  pm2_start_all_gpus.sh  pm2_start_one_gpu.sh  requirements.txt  reward.py  run.sh  run_autoupdate.sh  run_docker.sh  run_pm2.sh  setup.py  setup.sh  validator.py
validator-api/: Dockerfile  README.md  build.sh  build_docker.sh  example.env  requirements.txt  run.sh  run_docker.sh  setup.py  setup.sh
validator-api/validator_api/: main.py  validator_pipeline.py
validator/base/: build.py  pyproject.toml  setup.py
validator/base/validator/: miner_metrics.py  score_protocol.py  validator.py
validator/stress-test/: pyproject.toml  run.sh  setup.py  setup.sh
validator/stress-test/stress_test_validator/: main.py  miner_metrics.py  stress_test_validator.py  validator.py
validator/stress_test/: run.sh
validator/stress_test/stress_test_validator/: miner_metrics.py
validator/user-requests/: build.py  pyproject.toml  run.sh  setup.py  setup.sh
validator/user-requests/protos/: forwarding_validator.proto
validator/user-requests/user_requests_validator/: cryptographic_sample.py  main.py  miner_metrics.py  reward.py  similarity_score_pipeline.py  validator.py  watermark.py
validator/user_requests/: run.sh  setup.sh
validator/user_requests/user_requests_validator/: reward.py  watermark.py
validator/validator/: cryptographic_sample.py  get_base_weights.py  main.py  metrics.py  miner_metrics.py  reward.py  similarity_score_pipeline.py  stress_test.py  user_requests.py  validator.py  watermark.py
validator/validator/base/: miner_metrics.py  validator.py
validator/validator/stress_test/: miner_metrics.py  validator.py
validator/validator/user_requests/: miner_metrics.py  validator.py
validator_api/: main.py  requirements.txt  run.sh  setup.py  validator_pipeline.py
