[tool.poetry]
name = "wombo-bittensor-subnet-client"

version = "1.0.0"

description = "The API client which queries the subnet and returns the response to the requesting API"

license = "MIT"

authors = ["WOMBO <hello@w.ai>"]

packages = [{ include = "client" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
wombo-bittensor-subnet-neuron-selector = { path = "../neuron-selector", develop = true }

[build-system]
requires = ["poetry-core", "setuptools", "grpcio-tools==1.64.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry-monorepo.deps]
