[tool.poetry]
name = "wombo-bittensor-subnet-gpu-pipeline"

version = "1.0.0"

description = "The TAO image pipeline"

readme = "../README.md"

license = "MIT"

authors = ["WOMBO <hello@w.ai>"]

packages = [{ include = "gpu_pipeline" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = "2.2.0"
pillow = "10.2.0"
diffusers = "0.25.1"
transformers = "4.37.2"
accelerate = "0.26.1"
peft = "0.8.2"
safetensors = "0.4.2"
omegaconf = "2.3.0"
opencv-python-headless = "4.8.0.76"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-monorepo.deps]
