[tool.poetry]
name = "wombo-bittensor-subnet-miner"

version = "1.0.0"

description = "The subnet's primary compute provider, incentivied to be ran under a load balancer. Generates media to be used by validators."

license = "MIT"

authors = ["WOMBO <hello@w.ai>"]

packages = [{ include = "miner" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
wombo-bittensor-subnet-gpu-pipeline = { path = "../gpu-pipeline", develop = true }
wombo-bittensor-subnet-neuron = { path = "../neuron" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-monorepo.deps]
