[tool.poetry]
name = "wombo-bittensor-subnet-stress-test-validator"

version = "1.0.0"

description = "The portion of the validator used for sending challenges to the miners and setting weights."

license = "MIT"

authors = ["WOMBO <hello@w.ai>"]

packages = [{ include = "stress_test_validator" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
wombo-bittensor-subnet-validator = { path = "../base", develop = true }
nltk = "3.8.1"
heapdict = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-monorepo.deps]
